--- a/day02/index.html
+++ b/day02/index.html
@@ -9,11 +9,11 @@
 <div class="flex flex-col justify-center items-center  min-h-screen ">
     <div class="bg-[#3FAF82] w-48  h-48 flex flex-col justify-center items-center relative">
         <div id="lines" class=" absolute z-30">
-            <div class="w-10 h-1 bg-white  rounded mb-1.5 " id="lines-1">
+            <div class="w-10 h-1 bg-white  rounded mb-1.5 " id="line-1">
             </div>
-            <div class="w-10 h-1 bg-white  rounded mb-1.5 " id="lines-2">
+            <div class="w-10 h-1 bg-white  rounded mb-1.5 " id="line-2">
             </div>
-            <div class="w-10 h-1 bg-white rounded" id="lines-3">
+            <div class="w-10 h-1 bg-white rounded" id="line-3">
             </div>
         </div>
 <!--        <div id="line" class=" absolute z-20 hidden">-->
@@ -34,27 +34,20 @@
 </div>
 <script>
     let  isAnimating = false;
+    const lineIds = ['line-1', 'line-2', 'line-3'];
      document.getElementById('lines').addEventListener('click', function (){
-         const lines1 = document.getElementById('lines-1');
-         const lines2 = document.getElementById('lines-2');
-         const lines3 = document.getElementById('lines-3');
-         if (!isAnimating){
-             lines1.classList.remove("animate-line-1-rev")
-             lines2.classList.remove("animate-line-2-rev")
-             lines3.classList.remove("animate-line-3")
-             lines1.classList.add("animate-line-1")
-             lines2.classList.add("animate-line-2")
-             lines3.classList.add("animate-line-3")
-             isAnimating=true;
-         }else {
-             lines1.classList.remove("animate-line-1")
-             lines2.classList.remove("animate-line-2")
-             lines3.classList.remove("animate-line-3")
-             lines1.classList.add("animate-line-1-rev")
-             lines2.classList.add("animate-line-2-rev")
-             lines3.classList.add("animate-line-3-rev")
-             isAnimating=false;
-         }
+         lineIds.forEach(id => {
+             var lineId = document.getElementById(id);
+             if (!isAnimating){
+                 lineId.classList.add("animate-"+id);
+                 lineId.classList.remove("animate-"+id+"-rev");
+             }else {
+                 lineId.classList.remove("animate-"+id);
+                 lineId.classList.add("animate-"+id+"-rev");
+             }
+
+         })
+         isAnimating = !isAnimating;
      })
 
 
